<resources>
    <string name="app_name">Student ToDo</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Übersicht -->
    <string name="overview_title">Übersicht</string>
    <string name="overview_money_aktuell">Aktuelles Guthaben</string>
    <string name="overview_money_einnahmen">Einnahmen</string>
    <string name="overview_money_ausgaben">Ausgaben</string>

    <!-- Termine -->
    <string name="date_title">Termine</string>

    <!-- To Do -->
    <string name="todo_title">To Do</string>
    <string name="todo_todo_title">Noch zu erledigen</string>
    <string name="todo_finish_title">Schon erledigt</string>
    <string name="action_delete_todo">löschen</string>

    <!-- To Do Add / Edit -->
    <string name="todo_add_title">Neue Aufgabe</string>
    <string name="todo_add_beschreibung">Aufgabe</string>
    <string name="todo_add_beschreibung_edit">Aufgabenname</string>
    <string name="todo_add_datum">Bis wann zu erledigen</string>

    <string name="todo_edit_title">Aufgabe bearbeiten</string>

    <!-- Geld -->
    <string name="money_title">Mein Geld</string>

    <!-- Geld Add / Edit -->
    <string name="money_add_title">Geldeingang/ausgang</string>
    <string name="money_add_beschreibung">Betrag</string>
    <string name="money_add_datum">Datum</string>
    <string name="money_add_radiogroup">Eingang / Ausgang</string>
    <string name="money_add_eingang">Eingang</string>
    <string name="money_add_ausgang">Ausgang</string>

    <string name="money_edit_title">Aufgabe bearbeiten</string>

    <!-- About -->
    <string name="about_title">Über diese App</string>
    <string name="about_develope_title">Mitwirkende</string>
    <string name="about_developer">Christian Heinisch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="archived_label">Gelöscht</string>

    <string name="undo_label"><u>Undo</u></string>


</resources>
